# velora-prueba-carlos

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-EXTENSO.md  README.md  check_models.py  docker-compose.yml  entrypoint.sh  env.example  main.py  pyproject.toml  requirements.txt  run_app.py
app/: __init__.py  streamlit_app.py
app/assets/: README.md
backend/: __init__.py  modelos.py
backend/infraestructura/: __init__.py
backend/infraestructura/extraccion/: __init__.py  pdf.py  web.py
backend/infraestructura/llm/: __init__.py  comparador_semantico.py  configuracion_modelos.py  embedding_proveedor.py  hiperparametros.py  llm_proveedor.py
backend/infraestructura/persistencia/: __init__.py  memoria_usuario.py
backend/nucleo/: __init__.py
backend/orquestacion/: __init__.py  coordinador_grafo.py  grafo_fase1.py  orquestador.py
backend/recursos/: __init__.py  prompts.py
backend/utilidades/: __init__.py  contexto_temporal.py  logger.py  normalizacion.py  procesamiento.py
data/: .gitkeep
data/vectors/carlos/: index.faiss  (+1 more)
docs/: AGENTIC_INTERVIEWER.md  DOCKER_DEPLOYMENT.md  DOCUMENTACION_TECNICA.md  EMBEDDINGS_ARCHITECTURE.md  GUION_DEMO_VIDEO.md  HYPERPARAMETERS_GUIDE.md  INFORME_SISTEMA_EVALUACION.md  INICIO_RAPIDO_DOCKER.md  LANGSMITH_GUIDE.md  README_tecnico.md  VELORA_COMPONENTS_GUIDE.md  VELORA_SYSTEM_ARCHITECTURE.md  VELORA_USER_EXPERIENCE.md
docs/arquitectura/: FLUJOS_MATCHING.md  JUSTIFICACION_SIN_TOOLS.md  PROCESO_VALIDACION_EJEMPLOS.md
docs/auditoria/: 00_INDICE_GENERAL.md  01_FUNDAMENTOS_PYTHON.md  02_CONCEPTOS_POO.md  03_ARQUITECTURA_SISTEMA.md  04_DECISIONES_DISENO.md  05_FLUJO_DATOS.md  06_TECNOLOGIAS_UTILIZADAS.md  07_GLOSARIO_TERMINOS.md  08_BUENAS_PRACTICAS.md  09_RESUMEN_EJECUTIVO.md
docs/ejemplos/: cv_candidato.txt  cv_perfil_A_fronterizo.txt  cv_perfil_B_optimo.txt  cv_perfil_C_rechazado.txt  oferta_empleo.txt  oferta_prosegur_dba.txt
frontend/: streamlit_app.py
frontend/assets/: README.md
src/evaluator/: __init__.py  models.py
(+44 files in other folders)
