[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-evaluator"
version = "2.1.0"
description = "Sistema de evaluación de candidatos con LangChain, LangGraph y RAG"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Velora", email = "info@velora.com"}
]
keywords = ["langchain", "langgraph", "llm", "evaluation", "recruitment", "ai", "rag", "structured-output"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core LangChain
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.23",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    # LangGraph y LangSmith
    "langgraph>=0.0.20",
    "langsmith>=0.0.80",
    # Embeddings
    "faiss-cpu>=1.7.4",
    # Web
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    # Document processing
    "pypdf>=3.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
google = ["langchain-google-genai>=0.0.6"]
anthropic = ["langchain-anthropic>=0.1.0"]
all = [
    "langchain-google-genai>=0.0.6",
    "langchain-anthropic>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/velora/candidate-evaluator"
Documentation = "https://github.com/velora/candidate-evaluator#readme"
Repository = "https://github.com/velora/candidate-evaluator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

